# ToeplitzMixers

./: .env  .gitignore  Makefile  README.md  dataloader.py  ema_model.py  model.py  pyproject.toml  requirements.txt  toep_mixer_multiheaded.py  train.py
data/FineWeb/: fineweb_packed_tokenize.py  fineweb_tokenizer_trainer.py
data/SimpleStories/: dataprep.py  dataprep_old.py
experiments/001-intro/: dataloader.py  model.py  report.ipynb  train.py
experiments/002-fast-inference/: dataloader.py  ema_model.py  logs_2025-07-27.txt  model.py  report.ipynb  train.py
experiments/003-multiheaded/: .toep_copy.py.swp  fredholm_characteristic.py  frozen_toep_mixer_multiheaded.py  parallel_toep_multiheaded.py  repeat_test.py  report.ipynb  test_ops.py  toep_copy.py  toep_mixer_multiconv.py  toep_mixer_multiheaded.py  transformer_copy.py
experiments/004-toeplitz-training/: toep_mixer_test.py
experiments/005-linear-transformer/: defrilled_linear_transformer.py  fully_linear_transformer.py  linear_transformer.py  toeplitzified_lintransformer.py
experiments/006-multikernel/: test_ops.py  toep_mixer_multiconv.py
experiments/007-hyena/: hyena_autoencoder.py  hyena_copy.py  hyena_trainer_fineweb.py
experiments/008-information/: fineweb_autoencoding_toep_mixer_512_n16_c512_b32x4  fineweb_lineartransformer_1024_information_512_n8_c512_b32x4  fredholm_characteristic.py  frozen_toep_mixer_multiheaded.py  information_extraction.py  linear_transformer_autoencoder.py  linear_transformer_information.py  linear_transformer_information_exp.py  mamba.py  toep_autoencoder.py  (+2 more)
(+70 files in other folders)
