[project]
name = "toeplitz"
version = "0.1.0"
description = "Toeplitz MLP Mixers Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "triton>=3.3.1",
]
